--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         perl-version: ['5.32', '5.34', '5.38']
 
@@ -42,4 +43,4 @@ jobs:
 
       - name: Show cpanm build log on failure (non-Windows)
         if: runner.os != 'Windows' && failure()
-        run: tail -100 "$env:HOME/.cpanm/work/*/build.log"
+        run: tail -100 "$HOME/.cpanm/work/*/build.log"
