--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Install dependencies
         run: |
           cpanm --quiet --notest ExtUtils::MakeMaker
-          cpanm --installdeps --quiet --notest . || cat $HOME/.cpanm/work/*/build.log
+          # cpanm --installdeps --quiet --notest . || cat $HOME/.cpanm/work/*/build.log
+          cpanm --installdeps --notest . || cat $HOME/.cpanm/work/*/build.log
 
       - name: Run tests
         run: |
