--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         if: runner.os == 'Linux'
       - name: Install dependencies
         run: |
-          cpanm --quiet --notest ExtUtils::MakeMaker
+          cpanm --quiet --notest ExtUtils::MakeMaker IO::AIO
           # cpanm --installdeps --quiet --notest . || cat $HOME/.cpanm/work/*/build.log
           cpanm --installdeps --notest . || cat $HOME/.cpanm/work/*/build.log
         env:
