--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Update Ubuntu Packages
         run: |
           sudo apt-get update
-          sudo apt-get -y upgrade && sudo apt-get install -y libdb-dev
+          sudo apt-get -y upgrade && sudo apt-get install -y libdb-dev libwww-perl
         if: runner.os == 'Linux'
 
       - name: Install Perl dependencies
