--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install Perl dependencies
         run: |
-          cpanm --notest LWP::UserAgent LWP::Protocol::https Data::Throttler CGI::IDS DB_File
+          cpanm --notest LWP::UserAgent LWP::Protocol::https Data::Throttler CGI::IDS DB_File Config::Abstraction
 
       - name: Install App::Test::Generator this module's dependencies
         run: |
